--- a/jobly-frontend/src/CompanyList.css
+++ b/jobly-frontend/src/CompanyList.css
@@ -1,6 +1,6 @@
 .auth-container {
-    width: 95vw; 
-    max-width: 1500px; 
+    width: 100vw; 
+    max-width: 1600px; 
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -9,10 +9,10 @@
 }
 
 .auth-form {
-    width: 95%;  
-    max-width: 1300px; 
+    width: 100%;  
+    max-width: 1500px; 
     text-align: center;
-    padding: 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
