--- a/jobly-frontend/src/JobList.css
+++ b/jobly-frontend/src/JobList.css
@@ -1,6 +1,6 @@
 .auth-container {
-    width: 95vw;
-    max-width: 1400px;
+    width: 100vw;
+    max-width: 1400px; 
     margin: 0 auto;
     padding: 20px;
     display: flex;
@@ -9,10 +9,10 @@
 }
 
 .auth-form {
-    width: 95%;
-    max-width: 1200px;
+    width: 100%;
+    max-width: 1300px; 
     text-align: center;
-    padding: 20px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
